--- a/Cs8711/index.html
+++ b/Cs8711/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>  
 
 <style>
-.main{
+form{
 background-color: lightgreen;
 text-align:center;
 width: 400px;
-height: 400px;
-margin: 20px 500px;
+height: 100px;
+margin: 20px 700px;
+padding-top:60px;
 }
 
 
@@ -20,6 +21,7 @@ margin: 20px 500px;
 <form>
 <label for="city name">City Name</label>  
 <input type="text" id="cname" name="cname" /> 
+<input type="submit" value="Submit"/>
 </form>
 </body>  
 </html>  
